--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/create/write.html
@@ -84,7 +84,7 @@
 			<table class="condition table-fixed template">
 				<tbody>
 					<tr>
-						<th style="width:50px;" class="center"><input type="checkbox" class="custom-ui check-all"><label></label></th>
+						<th class="center checkbox"><input type="checkbox" class="custom-ui check-all"><label></label></th>
 						<th th:text="#{HQP_L_ORDER_NO}" class="center order-no"></th>
 						<th th:text="#{HQP_L_LINE_ITEM}" class="center item-line"></th>
 						<th th:text="#{HQP_L_ORDER_PART_NO}" class="center material"></th>
@@ -97,7 +97,13 @@
 						<th th:text="#{HQP_L_ORDER_DATE}" class="center order-date"></th>
 					</tr>
 					<tr>
-						<td></td>
+						<th style="width:50px;" class="center">
+							<input type="checkbox" class="custom-ui check-all"><label></label>
+							<input type="hidden" name="orderNo"/>
+							<input type="hidden" name="lineNo"/>
+							<input type="hidden" name="partNo"/>
+							<input type="hidden" name="orderDate"/>						
+						</th>
 						<td data-key="order-no" class="center"></td>
 						<td data-key="line-item" class="center"></td>
 						<td data-key="order-part-no"></td>
@@ -205,7 +211,7 @@ $(function(){
 		
 		try
 		{
-			$("#FORM_claim div.split-row-compact")[0].remove();//delete split row
+			$("#FORM_claim table:first").prev("div.split-row-compact").remove();//delete split row
 		}
 		catch (e) {};
 		
