베타 오픈 점검

--- a/src/main/resources/templates/platform/mgmt/conn_resource/write.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/write.html
@@ -90,6 +90,15 @@ $(document).ready(function() {
 						}
 					]
 				},
+				"R3name": {
+					identifier: "r3name",
+					rules: [
+						{
+							type: "empty",
+							prompt: "Please input {name}."
+						}
+					]
+				},				
 				"Group/Server": {
 					identifier: "grpServer",
 					rules: [
