--- a/src/main/resources/templates/platform/mgmt/conn_resource/list.html
+++ b/src/main/resources/templates/platform/mgmt/conn_resource/list.html
@@ -10,8 +10,8 @@
 	<div class="sub header">This platform offers how to access functions of SAP using JCO and you need to set up the connection info. first.</div>
 </div>
 <form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
-<input type="hidden" id="pageNumber" name="pageNumber"  th:value="${pageNumber}"/>
-<input type="hidden" id="rowPerPage" name="rowPerPage"  th:value="${rowPerPage}"/>
+<input type="hidden" name="pageNumber" value="1"/>
+<input type="hidden" name="rowPerPage" value="20"/>
 <div class="ui grey attached segment">
 	<div class="fields">	
 		<div class="twelve wide field">
@@ -52,8 +52,7 @@ $(document).ready(function() {
 			},
 			onClickPageNumber: function(pageNumber)
 			{
-				$("#pageNumber").val(pageNumber);
-				doSearch();
+				doSearch(pageNumber);
 			},
 			onClickDataKey: function(element, key, row)
 			{
@@ -156,10 +155,13 @@ $(document).ready(function() {
 	doSearch();
 });
 
-function doSearch()
+function doSearch(pageNumber)
 {
+	$("#FORM_search input:hidden[name=pageNumber]").val(JpUtilsString.defaultString(pageNumber, "1"));
+	$("#FORM_search input:hidden[name=rowPerPage]").val("10");		
+
 	listTable.load();
-};
+};	
 </script>
 
 </th:block>
