베타 오픈 점검

--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/part_info_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/part_info_list.html
@@ -30,7 +30,7 @@
 		<table class="condition table-fixed">
 			<tbody>
 				<tr>
-					<th style="width:150px" th:text="#{EUP_L_0102}"></th><!--Parts No.  -->
+					<th style="width:200px" th:text="#{EUP_L_0102}"></th><!--Parts No.  -->
 					<td> 			
 						<div class="input-area">
 							<input type="text" id="pPartsNo" name="pPartsNo" class="custom-ui-btn" style="text-transform: uppercase;" tabindex="1">
@@ -38,7 +38,7 @@
 							<button class="btn-popup2" type="button" onclick="searchParts();"></button>					
 						</div>
 					</td>
-					<th style="width:150px" th:text="#{EUP_L_0144}"></th><!-- Req Qty -->
+					<th style="width:200px" th:text="#{EUP_L_0144}"></th><!-- Req Qty -->
 					<td>
 						<div class="input-area">
 						<input type="text" id="pReqQty" name="pReqQty" class="custom-ui" tabindex="2">
@@ -54,9 +54,9 @@
 		<table class="condition table-fixed">
 			<tbody>
 				<tr>
-					<th style="width:150px" th:text="#{EUP_L_0145}"></th><!-- Part No Desc -->
+					<th style="width:200px" th:text="#{EUP_L_0145}"></th><!-- Part No Desc -->
 					<td id="MAKTX"></td>
-					<th style="width:150px" th:text="#{EUP_L_0146}"></th><!-- Stock -->
+					<th style="width:200px" th:text="#{EUP_L_0146}"></th><!-- Stock -->
 					<td id="AVA_FLAG"></td>			
 				</tr>		
 				<tr>
@@ -130,9 +130,9 @@
 		            <th style="text-align:center;" th:text="#{EUP_L_0156}"></th><!--Emergency Order  -->                        
 		        </tr>
 				<tr>
-					<td id="LPRICE"></td>
-					<td id="YUSO"></td>
-					<td id="YUEO"></td>						
+					<td id="LPRICE" class="right"></td>
+					<td id="YUSO" class="right"></td>
+					<td id="YUEO" class="right"></td>						
 				</tr> 
 			</tbody>        
 		</table>	
