--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/transfer_order.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/transfer_order.html
@@ -16,7 +16,7 @@
 	<table class="condition">
 		<tbody>
 			<tr>
-				<th th:text="#{EUP_L_0014}"></th>
+				<th th:text="#{EUP_L_0014}" style="width:150px;"></th>
 				<td>
 					<div class="input-area order-type"></div>
 				</td>
