--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -28,7 +28,7 @@
 <body>
 	<!-- Progress bar end -->
 	<div class="wrap">
-		<div style="position:absolute"><script>document.write("<img id='mainImg' src='" + "[[@{/portal/img/main}]]/main" + (Math.floor(Math.random()*6)+1) + ".png'/>");</script></div>
+		<div style="position:absolute"><script>document.write("<img id='mainImg' src='" + "[[@{/portal/img/main}]]/main" + (Math.floor(Math.random()*4)+1) + "_.png'/>");</script></div>
 		<div class="body-area">			
 			<div class="main-back-img">				
 				<div class="intro-area">
