--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/display/inquiry_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/display/inquiry_list.html
@@ -126,7 +126,7 @@ $(function(){
 		columnDefs: [
 			//{ className: "left", targets: "_all" }
 			{targets: [0, 2], className: 'link dt-body-center'},
-			{targets: [1, 3, 4, 6, 7], className: 'dt-body-center'},
+			{targets: [3, 4, 6, 7], className: 'dt-body-center'},
 			{targets: [5], className: 'dt-body-right'},
 		],
 		ajax: {
