--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/main.html
@@ -28,7 +28,7 @@
 <body>
 	<!-- Progress bar end -->
 	<div class="wrap">
-		<div style="position:absolute"><script>document.write("<img id='mainImg' src='" + "[[@{/portal/img/main}]]/main" + (Math.floor(Math.random()*6)+1) + ".png'/>");</script></div>
+		<div style="position:absolute"><script>document.write("<img id='mainImg' src='" + "[[@{/portal/img/main}]]/main" + (Math.floor(Math.random()*4)+1) + "_.png'/>");</script></div>
 		<div class="body-area">			
 			<div class="main-back-img">				
 				<div class="intro-area">
@@ -180,7 +180,7 @@ $(function(){
 	});	
 
 	$("#BTN_goOrder").on("click", function() {
-		document.location.href = "[[${BASE_PATH}]]/order/create/write";
+		document.location.href = "[[${BASE_PATH}]]/order/create/order_form";
 	});
 	
 	//Get last login information
@@ -319,17 +319,6 @@ function resizeView()
 		$("#mainImg").height(RESIZING_MIN_HEIGHT);
 	}
 };
-
-
-//$(document).ready(function(){
-//		$(". bx-controls-direction .bx-next").addClass('disabled');	
-//});
-//$(". bx-controls-direction .bx-next").addClass('disabled');	
-//$(".bx-controls-direction .bx-next").on("click", function() {    		
-//});
-
 </script>
-
-
 </body>
 </html>
