베타오픈 점검

--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/sub/part_info_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/sub/part_info_list.html
@@ -25,14 +25,14 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:150px" th:text="#{EUP_L_0102}"></th><!--Parts No.  -->
+			<th style="width:200px" th:text="#{EUP_L_0102}"></th><!--Parts No.  -->
 			<td> 			
 				<div class="input-area">
 					<input type="text" id="pPartsNo" name="pPartsNo" class="custom-ui-btn" tabindex="1">
 					<button class="btn-popup2" type="button" onclick="searchParts();"></button>					
 				</div>
 			</td>
-			<th style="width:150px" th:text="#{EUP_L_0144}"></th><!-- Req Qty -->
+			<th style="width:200px" th:text="#{EUP_L_0144}"></th><!-- Req Qty -->
 			<td>
 				<div class="input-area">
 				<input type="text" id="pReqQty" name="pReqQty" class="custom-ui" tabindex="2">
@@ -48,9 +48,9 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:150px" th:text="#{EUP_L_0145}"></th><!-- Part No Desc -->
+			<th style="width:200px" th:text="#{EUP_L_0145}"></th><!-- Part No Desc -->
 			<td id="MAKTX"></td>
-			<th style="width:150px" th:text="#{EUP_L_0146}"></th><!-- Stock -->
+			<th style="width:200px" th:text="#{EUP_L_0146}"></th><!-- Stock -->
 			<td id="AVA_FLAG"></td>			
 		</tr>		
 		<tr>
@@ -106,10 +106,10 @@
 <table class="condition">
      <tbody>
 		<tr>
-			<th th:text="#{EUP_L_0033}"></th><!--List Price  -->
+			<th th:text="#{EUP_L_0033}" class="center"></th><!--List Price  -->
 		</tr>		
 		<tr>
-			<td id="LPRICE"></td>
+			<td id="LPRICE" class="right"></td>
 		</tr> 
 	</tbody>        
 </table>	
