--- a/src/main/resources/templates/portal/iv/mgmt/account/write.html
+++ b/src/main/resources/templates/portal/iv/mgmt/account/write.html
@@ -19,7 +19,7 @@
 		<tbody>
 			<tr>
 				<th><div th:text="#{HQP_L_USER_TYPE}"></div><img src="/portal/img/icon/required.png" class="required" /></th>
-				<td>
+				<td class="wp13">
 					<div class="input-area">
 						<input type="radio" class="custom-ui" name="userType" value="D" checked /><label th:text="#{HQP_L_DEALER}"></label>
 						&nbsp;&nbsp;
