유럽/영국 요청 사항 반영

--- a/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -157,6 +157,8 @@ $(document).ready(function() {
 			submit();
 			return false;
 		};
+	}).on("click", function() {
+		$(this).select();
 	});
 	
 	resizeView();
