--- a/src/main/resources/templates/portal/common/authentication/change_password.html
+++ b/src/main/resources/templates/portal/common/authentication/change_password.html
@@ -177,7 +177,9 @@ $(document).ready(function() {
 			submit();
 			return false;
 		};
-	});	
+	}).on("click", function() {
+		$(this).select();
+	});
 });
 </script>
 </head>
