--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
@@ -120,7 +120,7 @@
 					</div>
 				</td>
 			</tr>
-			<tr>
+			<tr style="display:none;">
 				<th th:text="#{EUP_L_0026}"></th><!-- Remarks -->
 				<td colspan="3">
 					<input type="text" id="remark" name="remark" class="custom-ui"/>
