다국어 수정

--- a/src/main/resources/templates/portal/iv/hq/parts/export/invoice/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/invoice/list.html
@@ -180,7 +180,7 @@ $(".block-button-area.download button").on("click", function() {
 		
 		if (checkboxes.length == 0)
 		{
-			alert("[[#{HQP_M_ALLOW_DOWNLOAD_ONLY_ONE}]]");			
+			alert("[[#{HQP_M_SELECT_TARGETS}]]");			
 			return;
 		};
 		
