--- a/src/main/resources/templates/portal/iv/board/list.html
+++ b/src/main/resources/templates/portal/iv/board/list.html
@@ -8,6 +8,7 @@
 	<div class="block-header">
 		<div class="block-title" th:text="${boardName}"></div>
 		<div class="block-button-area">
+			<button id="BTN_showOldData" type="button" th:text="#{HQP_B_SHOW_OLD_DATA}" th:if="${not #strings.isEmpty(oldSystemUrl)}"></button>
 			<button id="BTN_write" type="button" th:text="#{HQP_B_WRITE}" th:if="${hasWriteAuth}"></button>
 			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button>			
 		</div>
@@ -61,7 +62,7 @@
 	<div id="AREA_grid" class="flex-grow grid-area">
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
-	
+	<iframe id="doobizLogin_F" style="display: none;"></iframe>
 <script>
 let $tableObj;
 $(function(){
@@ -153,6 +154,10 @@ $(function(){
 	
 	$("#BTN_write").on("click", function() {
 		$("#FORM_search").attr("action", "[[${BASE_PATH}]]/board/write").submit();
+	});
+	
+	$("#BTN_showOldData").on("click", function() {
+		$("#doobizLogin_F").attr("src", "/platform/mgmt/sso/out/doobiz");
 	});
 });
 
