--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
@@ -9,7 +9,9 @@
 	const GLOBAL_CONST = {
 		"DATE_FORMAT": "[[${DATE_FORMAT}]]",
 		"TIME_FORMAT": "[[${TIME_FORMAT}]]",
-		"DELIMITER": "[[${DELIMITER}]]"
+		"DELIMITER": "[[${DELIMITER}]]",
+		"YES": "[[${T(org.jwebppy.portal.iv.common.IvCommonVo).YES}]]",
+		"NO": "[[${T(org.jwebppy.portal.iv.common.IvCommonVo).NO}]]"
 	};
 	</script>
 
