--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
@@ -154,7 +154,7 @@ $(function(){
 	    			{data: "UOM", title: "[[#{HQP_L_UOM}]]"},//UoM
 	    			{data: "NET_PRICE", title: "[[#{HQP_L_NET_PRICE}]]"},//Net price
 	    			{data: "NET_VALUE", title: "[[#{HQP_L_NET_VALUE}]]"},//Net value	    			
-	    			{data: "AVAILABILITY", title: "[[#{HQP_L_AVAILABILITY}]]"}//Available
+	    			{data: "COM_QTY", title: "[[#{HQP_L_STOCK}]]"}//Stock
 	    		],
 	    		columnDefs: [
 	    			{targets: [0, 1, 5, 6, 7, 10], className: "dt-body-center"},
