--- a/src/main/resources/templates/portal/iv/hq/parts/export/info/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/info/view.html
@@ -21,7 +21,6 @@
 			<td colspan="3">
 				<div class="input-area">
 					<input type="text" id="pPartNo" name="pPartNo" class="custom-ui-btn" style="text-transform: uppercase;" autofocus />
-					<!--button class="btn-popup2" type="button" onclick="_showPartSearch($('#pPartNo').val());"></button-->					
 				</div>
 			</td>
 		</tr>		
@@ -140,6 +139,10 @@ $(window).on("load", function() {
 
 $(document).ready(function() {
 	_setPartAutocomplete($("#pPartNo"));
+	
+	$("#pPartNo").on("click", function() {
+		$(this).select();
+	});		
 });
 
 function doSearch()
