--- a/src/main/resources/templates/portal/iv/mgmt/mapping/list.html
+++ b/src/main/resources/templates/portal/iv/mgmt/mapping/list.html
@@ -49,6 +49,8 @@ $(function(){
 			doSearch();
 		}
 	});
+	
+	JpUiForm.input.on.select($("#pName"));
 
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true, 
