--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/common_func_js.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/common_func_js.html
@@ -147,4 +147,7 @@ $(".gotop").click(function() {
 	$("html, body").animate( { scrollTop : 0 }, 400);
 	return false;
 });	
+
+//세션유지
+CmSessionUtils.keepSession();
 </script>
