--- a/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
@@ -31,3 +31,4 @@
 <script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
 <script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
 <script th:src="@{/portal/js/portal.utils.download.js}"></script>
+<script th:src="@{/portal/js/portal.utils.session.js}"></script>
