--- a/src/main/resources/templates/portal/layout/iv/uk/parts/common/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/uk/parts/common/fragments/js.html
@@ -32,3 +32,4 @@
 <script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
 <script th:src="@{/portal/js/portal.utils.download.js}"></script>
 <script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
+<script th:src="@{/portal/js/portal.utils.session.js}"></script>
